# aelvoxim

./: .env.example  .gitignore  @AutomationLog.txt  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  deploy.sh  docker-compose.yml  knowledge_base.md  nul  pyproject.toml  requirements.txt  serve_chatael.py  start.sh  system_prompt.txt  training_log.md  wechat_test.py  wecom_bot.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  pages.yml  pypi.yml
Windows-MCP/: install_and_run.bat  mcp_bridge.py  start_test.bat  test_windows_mcp.py
Windows-MCP/src/windows_mcp/: __main__.py
Windows-MCP/tests/: test_deterministic_drag_input.py  test_display_inventory_tool.py  test_watchdog_toggle.py
aelvoxim-1.0.1/: LICENSE  README.md  pyproject.toml
aelvoxim-1.0.1/src/aelvoxim/: __init__.py  __main__.py  planner.py
aelvoxim-gateway/: AEL Gateway.spec  AEL_Gateway.spec  build_gateway.ps1  config.yaml  deploy_dist.ps1  install_service.bat  main.py  ocr_worker.py  server.py  start.bat  start_gateway.bat  start_gateway.py  test_main.ps1  test_ws_client.ps1  test_ws_cloud.ps1
aelvoxim-gateway/gateway/: __init__.py  client.py  config.py  context.py  controller.py  executor.py  server.py
aelvoxim-gateway/gateway/executor/: __init__.py  _uia.py  (+2 more)
aelvoxim-gateway/scripts/: photoshop.jsx
aelvoxim-gateway/tests/: test_full_pipeline.py  test_worker.py
config/: path_registry.json  routing_rules.json
docs/: api.md  architecture.md  deployment.md  docker.md
frontend/chatael/: index.html  package-lock.json  package.json  serve.py  tailwind.config.ts
frontend/chatael-v2/: package-lock.json  package.json  serve.py  vite.config.ts
locales/: en.json  zh.json
scripts/: arch_review.py  chat_history.sh  ci_html_check.py  cleanse_knowledge.py  lint_check.py  migrate_sqlite_to_pg.py  pre-commit.sh  qa_gate.py  quality_check.py  release.sh  smoke_test.sh
src/: run_server.py
src/aelvoxim/: PLAN_SPLIT.md  __init__.py  __main__.py  admin.py  planner.py
src/aelvoxim_orchestrator/: __init__.py  __main__.py  app.py  router.py
tests/: __init__.py  test_auth.py  test_auth_api.py  test_belief.py  test_calibration.py  test_chimera.py  test_control_metacog.py  test_core.py  test_core_extra.py  test_cortex.py  test_database.py  test_decompose.py  test_desktop_intg.py  test_edition.py  test_entity_extractor.py  test_ethics.py  test_execute.py  test_experts_code_review.py  test_fusion.py  test_gateway.py  test_intent.py  test_knowledge.py  test_learner.py  test_learner_extra.py  test_memory.py  test_memory_extra.py  test_memory_extra2.py  test_meta_learner.py  test_monitor.py  test_p2_modules.py  test_post_validation.py  test_router.py  test_routes.py  test_routes_chat.py  test_routes_system.py  test_scorer.py  test_self_review.py  test_service_chat.py  test_sub_agent.py  test_tool_use.py  (+1 more)
(+268 files in other folders)
