[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aelvoxim"
version = "1.1.1"
description = "Lightweight AI Cognitive Engine Framework — give your AI a memory"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "macor24", email = "macor@gealss.com"},
]
keywords = ["ai", "agent", "cognitive-engine", "memory", "self-learning", "framework"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "bcrypt>=4.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.20.0",
]

[project.optional-dependencies]
pg = ["psycopg2-binary>=2.9.0"]
test = ["pytest>=7.0", "httpx>=0.27"]
dev = ["aelvoxim[pg,test]", "build>=1.0", "twine>=4.0"]
full = ["aelvoxim[pg]"]

[project.urls]
Homepage = "https://github.com/macor24/aelvoxim"
Repository = "https://github.com/macor24/aelvoxim"
Documentation = "https://github.com/macor24/aelvoxim/tree/master/docs"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
aelvoxim = ["**/*.html"]

[project.scripts]
aelvoxim = "aelvoxim.__main__:main"
aelvoxim-admin = "aelvoxim.admin:main"
